# h-transport-materials

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  example.py  install.sh  out.bib  out.json  paper.bib  paper.md  plot.py  plot_copper.py  plot_cucrzr.py  plot_tungsten.py  pyproject.toml  setup.cfg  test.py  usage.py
.github/ISSUE_TEMPLATE/: PROPERTY-SUGGESTION.yml
.github/workflows/: ci.yml  compile_database.yml  doctest.yml  publish_database.yml  python-publish.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/: style.css
docs/api/: helpers.rst  index.rst  materials.rst  plotting.rst  properties.rst
docs/dev/: contributing.rst  documentation.rst
docs/getting/: index.rst
docs/user/: database.rst  defining_property.rst  examples.rst  groups.rst  index.rst  plotting.rst
environment/: environment.yml  install-environment.sh  requirements.txt
examples/: first_example.py  plot_copper.py  plot_cucrzr.py  plot_lipb.py  plot_tungsten.py
h_transport_materials/: __init__.py  _version.py  conversion.py  fitting.py  helpers.py  import_csv.py  material.py  plotting.py  properties_group.py  property.py  references.bib
h_transport_materials/materials/: __init__.py  aluminium.py  beryllium.py  carbon.py  (+29 more)
releases_info/: compute_version_info.py  create_releases_file.py  main.py  plot.py  releases.json
tests/: test_arhenius_property.py  test_conversion.py  test_diffusivity.py  test_fitting.py  test_materials.py  test_permeability.py  test_plotting.py  test_properties_group.py  test_property.py  test_solubility.py  test_system.py
(+214 files in other folders)
