[metadata]
name = h_transport_materials
author = Remi Delaporte-Mathurin
author_email = rdelaportemathurin@gmail.com
description = Handle H transport properties
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RemDelaporteMathurin/h_transport_materials
license = MIT
license_file = LICENSE
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/RemDelaporteMathurin/h_transport_materials
    Tracker = https://github.com/RemDelaporteMathurin/h_transport_materials/issues

[options]
packages = find:
python_requires= >=3.6
install_requires=
    numpy >= 1.9
    matplotlib >= 3.2.2
    scipy >= 1.8

[options.extras_require]
tests = 
    pytest >= 5.4.3